--- a/parts/res/xml/dirac_settings.xml
+++ b/parts/res/xml/dirac_settings.xml
@@ -39,7 +39,7 @@
         android:title="@string/dirac_preset_title"
         android:summary="%s" />
 
-    <PreferenceCategory
+<!--    <PreferenceCategory
         android:key="dirac_hifi"
         android:title="@string/dirac_hifi_title">
 
@@ -49,6 +49,6 @@
             android:title="@string/dirac_hifi_enable_title"
             android:summary="@string/dirac_hifi_summary"/>
 
-    </PreferenceCategory>
+    </PreferenceCategory> -->
 
 </PreferenceScreen>
